Updated the Github link to fit the navigation menu width.

--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -46,7 +46,7 @@
             <li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>
             {% endif %}
             {% if site.author.github %}
-            <li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
+            <li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github</a></li>
             {% endif %}
             {% if site.author.twitter %}
             <li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" rel="me">twitter.com/{{ site.author.twitter }}</a></li>
