--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -12,10 +12,10 @@
     <body>
         <div id="containerlimited"><!-- Use"containerfull" for 100% width. For fixed width, use "container980", "container760" or "container600" (the number is the layout width in pixels). -->
             <div id="header">
-		<h1><a href="{{ site.baseurl }}/index.html">JVSTM</a></h1>
+		<h1><a href="{{ site.baseurl }}/index.html">JVSTM - Java Versioned STM</a></h1>
 		<!-- <h2>Develop Java applications with a transactional and -->
 		<!-- persistent domain model</h2> -->
-                <h2>Java Versioned STM</h2>
+                <h2>Strict Serializability is Harmless!</h2>
             </div>
             <div id="menu">
             	<ul>
@@ -69,7 +69,7 @@
 		</div>
 
 		<div id="content">
-                    {% include only-the-post.html %}
+                    {{ content }}
                     <div class="clear">&nbsp;</div>
                 </div>
 		<div class="clear">&nbsp;</div>
