--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,10 +27,11 @@
             <div id="main">
 		<div id="sidebar">
                     <div class="sidebarbox">
-                        <h2>Documentation</h2>
+                        <h2>Navigation</h2>
                         <ul class="sidemenu">
                             <li><a href="{{ site.baseurl }}/index.html">About</a></li>
                             <li><a href="{{ site.baseurl }}/QuickStart.html">Quick Start</a></li>
+                            <li><a href="{{ site.baseurl }}/Downloads.html">Downloads</a></li>
                             <li><a href="{{ site.baseurl }}/Publications.html">Publications</a></li>
                             <li><a href="http://www.gnu.org/licenses/lgpl-3.0.txt">License</a></li>
                         </ul>
