Add link to Github repository.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,6 +20,7 @@
             <div id="menu">
             	<ul>
                     <!-- <li><a href="{{ site.baseurl }}/rss.xml"><img src="{{ site.baseurl }}/images/feed-icon-28x28.png" /></a></li> -->
+                    <li><a href="https://github.com/inesc-id-esw/jvstm"><img src="{{ site.baseurl }}/images/blacktocat-28x28.png" /></a></li>
                     <li><a href="{{ site.baseurl }}/atom.xml"><img src="{{ site.baseurl }}/images/feed-icon-28x28.png" /></a></li>
             	</ul>
             </div>
