Fix the downloads link.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -32,7 +32,7 @@
                         <ul class="sidemenu">
                             <li><a href="{{ site.baseurl }}/index.html">About</a></li>
                             <li><a href="{{ site.baseurl }}/QuickStart.html">Quick Start</a></li>
-                            <li><a href="{{ site.baseurl }}/Downloads.html">Downloads</a></li>
+                            <li><a href="{{ site.baseurl }}/maven-repo/jvstm/">Downloads</a></li>
                             <li><a href="{{ site.baseurl }}/Publications.html">Publications</a></li>
                             <li><a href="http://www.gnu.org/licenses/lgpl-3.0.txt">License</a></li>
                         </ul>
